--- a/SensorHelmetMobile/SensorHelmetMobileApp/SensorHelmetMobileApp/View/Storyboard/Base.lproj/Main.storyboard
+++ b/SensorHelmetMobile/SensorHelmetMobileApp/SensorHelmetMobileApp/View/Storyboard/Base.lproj/Main.storyboard
@@ -62,35 +62,66 @@
                                     <action selector="presentMapButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="MFo-OK-WFp"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Cj6-aL-nq4">
+                                <rect key="frame" x="159" y="308.66666666666669" width="75" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <action selector="bluetoothButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g9L-MB-Qal"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Drb-CP-LAX">
+                                <rect key="frame" x="15" y="623.66666666666663" width="363" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MoC-BA-kQq">
+                                <rect key="frame" x="15" y="654.66666666666663" width="363" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kDq-vg-v64" secondAttribute="trailing" constant="15" id="0qe-9N-5Qj"/>
                             <constraint firstItem="PNN-hj-BYk" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="2Sk-Q6-6jg"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="MoC-BA-kQq" secondAttribute="trailing" constant="15" id="2fM-FD-0BA"/>
                             <constraint firstItem="iZ8-kx-HZC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="3e7-HM-f2f"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nof-ZQ-38d" secondAttribute="trailing" constant="15" id="4hH-2z-Zg4"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iZ8-kx-HZC" secondAttribute="trailing" constant="15" id="BGH-cj-ssf"/>
                             <constraint firstItem="Fba-Uw-YkV" firstAttribute="top" secondItem="kDq-vg-v64" secondAttribute="bottom" constant="10" id="DeD-kR-JZh"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="PNN-hj-BYk" secondAttribute="trailing" constant="15" id="Jg2-Ds-5gI"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Drb-CP-LAX" secondAttribute="trailing" constant="15" id="Rdg-8e-z91"/>
                             <constraint firstItem="cjV-ri-dCg" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="ThK-DS-ULO"/>
                             <constraint firstItem="cjV-ri-dCg" firstAttribute="top" secondItem="jfr-Wo-qdq" secondAttribute="bottom" constant="15" id="U30-EP-s5I"/>
+                            <constraint firstItem="Drb-CP-LAX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="XeN-NK-iYS"/>
+                            <constraint firstItem="MoC-BA-kQq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="ac0-Js-ih8"/>
                             <constraint firstItem="PNN-hj-BYk" firstAttribute="top" secondItem="nof-ZQ-38d" secondAttribute="bottom" constant="20" id="av2-d5-LKN"/>
                             <constraint firstItem="kDq-vg-v64" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="awZ-qx-P3B"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Fba-Uw-YkV" secondAttribute="trailing" constant="15" id="dOO-KL-fyC"/>
                             <constraint firstItem="nof-ZQ-38d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="eWM-0i-TMg"/>
                             <constraint firstItem="jfr-Wo-qdq" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fLO-Bm-S6r"/>
+                            <constraint firstItem="Drb-CP-LAX" firstAttribute="top" secondItem="Fba-Uw-YkV" secondAttribute="bottom" constant="10" id="hwy-Me-Axk"/>
                             <constraint firstItem="nof-ZQ-38d" firstAttribute="top" secondItem="cjV-ri-dCg" secondAttribute="bottom" constant="15" id="lT2-qa-1At"/>
                             <constraint firstItem="cjV-ri-dCg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lzf-25-ncS"/>
+                            <constraint firstItem="MoC-BA-kQq" firstAttribute="top" secondItem="Drb-CP-LAX" secondAttribute="bottom" constant="10" id="nBK-RK-bzR"/>
                             <constraint firstItem="Fba-Uw-YkV" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="sGH-pV-Ct8"/>
                             <constraint firstItem="iZ8-kx-HZC" firstAttribute="top" secondItem="PNN-hj-BYk" secondAttribute="bottom" constant="10" id="sWR-Gb-Ebc"/>
                             <constraint firstItem="kDq-vg-v64" firstAttribute="top" secondItem="iZ8-kx-HZC" secondAttribute="bottom" constant="10" id="uPt-Ow-2bC"/>
+                            <constraint firstItem="jfr-Wo-qdq" firstAttribute="top" secondItem="Cj6-aL-nq4" secondAttribute="bottom" constant="15" id="vbX-Jb-upQ"/>
+                            <constraint firstItem="Cj6-aL-nq4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vmb-w6-6UP"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="bluetoothButton" destination="Cj6-aL-nq4" id="oTz-2A-hxe"/>
                         <outlet property="curDateLabel" destination="nof-ZQ-38d" id="yoe-Hz-AV2"/>
                         <outlet property="dateLabel" destination="PNN-hj-BYk" id="rUt-KO-8nD"/>
                         <outlet property="humidLabel" destination="Fba-Uw-YkV" id="Ije-1O-bGc"/>
+                        <outlet property="latitudeLabel" destination="MoC-BA-kQq" id="y4c-8D-Dbs"/>
+                        <outlet property="longitudeLabel" destination="Drb-CP-LAX" id="O1i-vU-B2l"/>
                         <outlet property="presentMapButton" destination="jfr-Wo-qdq" id="Kqd-3U-06K"/>
                         <outlet property="readDataButton" destination="cjV-ri-dCg" id="iqB-9y-10Z"/>
                         <outlet property="tempLabel" destination="kDq-vg-v64" id="10N-bc-Z7R"/>
