--- a/SensorHelmetMobile/SensorHelmetMobileApp/SensorHelmetMobileApp/View/Storyboard/SerialView.storyboard
+++ b/SensorHelmetMobile/SensorHelmetMobileApp/SensorHelmetMobileApp/View/Storyboard/SerialView.storyboard
@@ -23,7 +23,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8Q-td-vQO">
-                                <rect key="frame" x="159" y="536.33333333333337" width="75" height="35"/>
+                                <rect key="frame" x="159" y="408.66666666666669" width="75" height="35"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
@@ -31,11 +31,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8q5-v7-M4w">
-                                <rect key="frame" x="159" y="596.33333333333337" width="75" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="HDD-5y-Ram"/>
-                                    <constraint firstAttribute="height" constant="30" id="iLf-ac-3wt"/>
-                                </constraints>
+                                <rect key="frame" x="159" y="463.66666666666669" width="75" height="34.333333333333314"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
@@ -46,13 +42,12 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="8q5-v7-M4w" firstAttribute="top" secondItem="A8Q-td-vQO" secondAttribute="bottom" constant="25" id="0CQ-FD-6nx"/>
                             <constraint firstItem="qHd-Mf-3yI" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="0.7" id="461-LL-mjn"/>
                             <constraint firstItem="qHd-Mf-3yI" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="7Fu-BW-pFl"/>
-                            <constraint firstItem="8q5-v7-M4w" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="7jN-Ji-mEH"/>
+                            <constraint firstItem="8q5-v7-M4w" firstAttribute="top" secondItem="A8Q-td-vQO" secondAttribute="bottom" constant="20" id="aIL-B9-SL2"/>
                             <constraint firstItem="8q5-v7-M4w" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="aL9-1Q-faz"/>
+                            <constraint firstItem="A8Q-td-vQO" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" id="m3p-Ba-YVM"/>
                             <constraint firstItem="A8Q-td-vQO" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="nyZ-z1-QXZ"/>
-                            <constraint firstItem="A8Q-td-vQO" firstAttribute="centerY" secondItem="5EZ-qb-Rvc" secondAttribute="centerY" multiplier="1.3" id="ylp-4T-hK5"/>
                         </constraints>
                     </view>
                     <connections>
